--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <div id="App"></div>
-    <script src="./dist/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
