CHANG:http=>https

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" type="text/css" href="./styles/reset.css">
     <link rel="stylesheet" type="text/css" href="./styles/common.css">
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
-    <link rel="stylesheet" type="text/css" href="http://news-at.zhihu.com/css/news_qa.auto.css?v=4b3e3">
+    <link rel="stylesheet" type="text/css" href="https://news-at.zhihu.com/css/news_qa.auto.css?v=4b3e3">
 
   </head>
   <body>
     <div id="App"></div>
-    <script type="text/javascript" src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
+    <script type="text/javascript" src="https://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
     <script src="./bundle.js"></script>
   </body>
 </html>
