--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    
-    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="./styles/app.css">
-    <link rel="stylesheet" type="text/css" href="http://news-at.zhihu.com/css/news_qa.auto.css?v=4b3e3">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./styles/common.css">
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="https://news-at.zhihu.com/css/news_qa.auto.css?v=4b3e3">
+    <link rel="stylesheet" type="text/css" href="./styles/app.css"> 
   </head>
   <body>
     <div id="App"></div>
-    <script type="text/javascript" src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
+    <script type="text/javascript" src="https://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
     <script src="./bundle.js"></script>
   </body>
 </html>
